Create Join-the-team section

--- a/HTML-CSS/Erikk-template/index.html
+++ b/HTML-CSS/Erikk-template/index.html
@@ -277,7 +277,6 @@
                 <img src="./assets/insta.svg" alt="" />
                 <img src="./assets/insta.svg" alt="" />
                 <img src="./assets/insta.svg" alt="" />
-
               </div>
             </div>
             <p>
@@ -299,14 +298,14 @@
                 <img src="./assets/insta.svg" alt="" />
                 <img src="./assets/insta.svg" alt="" />
                 <img src="./assets/insta.svg" alt="" />
-
               </div>
             </div>
             <p>
               Leading our creative vision with strategic insights and innovative
               ideas.
             </p>
-          </div> <div class="team-member">
+          </div>
+          <div class="team-member">
             <h2>John Doe</h2>
             <div class="profile">
               <img
@@ -320,14 +319,14 @@
                 <img src="./assets/insta.svg" alt="" />
                 <img src="./assets/insta.svg" alt="" />
                 <img src="./assets/insta.svg" alt="" />
-
               </div>
             </div>
             <p>
               Leading our creative vision with strategic insights and innovative
               ideas.
             </p>
-          </div> <div class="team-member">
+          </div>
+          <div class="team-member">
             <h2>John Doe</h2>
             <div class="profile">
               <img
@@ -341,13 +340,25 @@
                 <img src="./assets/insta.svg" alt="" />
                 <img src="./assets/insta.svg" alt="" />
                 <img src="./assets/insta.svg" alt="" />
-
               </div>
             </div>
             <p>
               Leading our creative vision with strategic insights and innovative
               ideas.
             </p>
+          </div>
+        </div>
+      </section>
+      <!--  -->
+      <section class="join-the-team">
+        <div class="top-container"></div>
+        <div class="bottom-container">
+          <hr />
+          <p>JOIN THE TEAM</p>
+          <h1>Want to shape the future of branding?</h1>
+          <div class="link">
+            <img src="./assets/arrow.svg" alt="" />
+            <p>Find Job</p>
           </div>
         </div>
       </section>
