Create footer section

--- a/HTML-CSS/Erikk-template/index.html
+++ b/HTML-CSS/Erikk-template/index.html
@@ -363,5 +363,9 @@
         </div>
       </section>
     </main>
+    <!--  -->
+    <footer>
+      <p>&copy; CLONE TEMPLATE FOR PRACTICE.</p>
+    </footer>
   </body>
 </html>
