--- a/Task-Manager/index.html
+++ b/Task-Manager/index.html
@@ -3,49 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <title>Task Manager</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Main -->
     <main>
-      <div class="all-elems">
-        <div class="todo elem">
+      <section class="all-elems">
+        <div class="todo elem" id="0">
           <img
             src="https://images.unsplash.com/photo-1757288354960-0e9783136e4c?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="todo"
           />
           <h1>To do</h1>
         </div>
-        <div class="daily-palanner elem">
+        <div class="daily-palanner elem" id="1">
           <img
             src="https://images.unsplash.com/photo-1754634026426-4bc23801b618?q=80&w=764&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="daily-palanner"
           />
           <h1>Daily Planner</h1>
         </div>
-        <div class="motivation elem">
+        <div class="motivation elem" id="2">
           <img
             src="https://images.unsplash.com/photo-1703881796581-4d52dbe232cc?q=80&w=627&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="motivation"
           />
           <h1>Motivation</h1>
         </div>
-        <div class="pomodoro-timer elem">
+        <div class="pomodoro-timer elem" id="3">
           <img
             src="https://images.unsplash.com/photo-1757207445614-d1e12b8f753e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxMXx8fGVufDB8fHx8fA%3D%3D"
             alt="pomodoro-timer"
           />
           <h1>Pomodoro Timer</h1>
         </div>
-        <div class="daily-goals elem">
+        <div class="daily-goals elem" id="4">
           <img
             src="https://images.unsplash.com/photo-1756732938177-0d3597002b9c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyOXx8fGVufDB8fHx8fA%3D%3D"
             alt="daily-goals"
           />
           <h1>Daily Goals</h1>
         </div>
-      </div>
+      </section>
+      <!-- Pages -->
+      <section class="to-do elm-page">
+        <h1>To Do</h1>
+        <i class="ri-close-line" id="0"></i>
+      </section>
+      <section class="dai elm-page">
+        <h1>Daily Planner</h1>
+        <i class="ri-close-line" id="1"></i>
+      </section>
+      <section class="moti elm-page">
+        <h1>Motivation</h1>
+        <i class="ri-close-line" id="2"></i>
+      </section>
+      <section class="pomo elm-page">
+        <h1>Pomodoro Timer</h1>
+        <i class="ri-close-line" id="3"></i>
+      </section>
+      <section class="daily elm-page">
+        <h1>Daily Goals</h1>
+        <i class="ri-close-line" id="4"></i>
+      </section>
     </main>
 
     <script src="script.js"></script>
