feature: add feature for add and display tasks

--- a/Task-Manager/index.html
+++ b/Task-Manager/index.html
@@ -58,7 +58,12 @@
         <div class="task-container">
           <div class="add-task">
             <form>
-              <input type="text" placeholder="I want to..." required class="input-task"/>
+              <input
+                type="text"
+                placeholder="I want to..."
+                required
+                class="input-task"
+              />
               <textarea
                 name="details"
                 id="details"
@@ -74,18 +79,7 @@
             </form>
           </div>
           <div class="task-list">
-            <div class="task">
-              <p>Task list</p>
-              <button>Mark as completed</button>
-            </div>
-            <div class="task">
-              <p>Task list</p>
-              <button>Mark as completed</button>
-            </div>
-            <div class="task">
-              <p>Task list</p>
-              <button>Mark as completed</button>
-            </div>
+            <div class="task"></div>
           </div>
         </div>
       </section>
