--- a/ReactJs/CRUD/index.html
+++ b/ReactJs/CRUD/index.html
@@ -6,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRUD</title>
     <style>
-      html,
       body {
-        height: 100%;
-        width: 100%;
-      }
-      body {
-        background-color: #010101;
-        color: #f3f3f3;
+        background-color: #f1f1f1;
+        color: #010101;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
