Update layout, display recipe and detail recipe

--- a/ReactJs/Recipe/index.html
+++ b/ReactJs/Recipe/index.html
@@ -6,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>recipe</title>
     <style>
-      html,
       body {
-        height: 100%;
-        width: 100%;
-      }
-      body {
-        background-color: #0b0b13;
-        color: #f3f3f3;
+        background-color: #f3f3f3;
+        color: #0b0b13;
       }
     </style>
   </head>
