--- a/ReactJs/E-Com/frontend/index.html
+++ b/ReactJs/E-Com/frontend/index.html
@@ -7,6 +7,8 @@
     <title>E-com</title>
     <style>
       body {
+        height: 100%;
+        width: 100%;
         background-color: #f1f1f1;
         color: #020202;
       }
